[package]
name = "mutex-watersheds-jni"
version = "0.1.0"
authors = ["Philipp Hanslovsky <philipp.hanslovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
mutex-watersheds = { path = "../../r_mutex-watersheds" }
log = "0.4"
pretty_env_logger = "0.4"

[lib]
crate_type = ["cdylib"]
